// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PButton behaviour emits click 1`] = `
<button
  class="PButton"
  id="test"
>
  
  
</button>
`;

exports[`PButton behaviour emits keydown 1`] = `
<button
  class="PButton"
  id="test"
>
  
  
</button>
`;

exports[`PButton rendering renders PButton 1`] = `
<button
  class="PButton"
>
  
  
</button>
`;

exports[`PButton rendering renders PButton with props 1`] = `
<button
  ariahaspopup="dialog"
  arialabel="Fake PButton"
  ariaroledescription="this is unnecessary but test"
  class="PButton PButton--fake"
  disabled=""
  id="test"
  role="link"
>
  
  
</button>
`;
